# SlipLib

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG_SECTION_TEMPLATE.md  CHANGES.rst  LICENSE  README.md  README.rst  README.txt  appveyor.yml  pylintrc  pyproject.toml  pytest.ini  readthedocs.yaml  readthedocs.yml  setup.py  test-requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: publish.yml  release.yml  test.yml
Examples/EchoServer/: Client.py  Server.py
Examples/Threaded/: Server.py  Shared.py
Test/: FunctionalTests.py  slip_test.py
docs/: Makefile  conf.py  example.rst  index.rst  make.bat  module.rst  requirements.txt
docs/source/: conf.py  example.rst  index.rst  intro.rst  modindex.rst  module.rst
docs/source/_static/: custom.css
examples/EchoServer/: Client.py  Server.py  __init__.py
examples/echoserver/: __init__.py  client.py  server.py
slip/: __init__.py  slip.py
slip/test/: FunctionalTests.py  test_slip.py
sliplib/: __init__.py  slip.py  sliprequesthandler.py  slipsocket.py  slipstream.py  slipwrapper.py  version.py
sliplib/test/: FunctionalTests.py  test_slip.py
src/: DESCRIPTION.rst  MANIFEST.in
src/slip/: slip.py
src/slip.egg-info/: PKG-INFO  SOURCES.txt
src/sliplib/: __init__.py  legacy.py  slip.py  sliprequesthandler.py  slipserver.py  slipsocket.py  slipstream.py  slipwrapper.py  version.py
tests/: __init__.py  conftest.py
tests/examples/: __init__.py
tests/examples/echoserver/: test_echo_server.py
tests/integration/: __init__.py  test_data.py  test_server_client.py  test_slip_file.py  test_slip_file_unbuffered.py  test_slip_in_memory_io.py  test_slip_server_and_handler.py  test_sliprequesthandler.py
tests/unit/: test_config.py  test_legacy.py  test_slip.py  test_sliprequesthandler.py  test_slipserver.py  test_slipsocket.py  test_slipstream.py  test_slipwrapper.py  test_version.py
